--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,6 @@ header{
 	position: fixed;
     background: var(--color_header);
     width: 100%;
-    min-width: var(--min_width_html);
     height: var(--height_header);
     z-index: 999;
 }
@@ -25,7 +24,7 @@ header ul li.logo img{
 	width: var(--height_header);
 	scale: 80%;
 }
-header ul li.button a{
+header ul li.button a, header ul li.menu-button a{
 	display: flex;
 	width: 100%;
 	height: 100%;
@@ -94,7 +93,11 @@ header ul li.button:hover a > *, header ul li.menu-button:hover a > *{
 	transition: all 0.5s;
 }
 header ul li.menu-button{
+	padding: 0px;
 	display: none;
+}
+header ul li.menu-button span{
+	padding-right: 10px;
 }
 header ul li.menu-button .menu-button-icon{
 	display: flex;
@@ -115,7 +118,31 @@ header ul li.menu-button .menu-button-icon div{
 	background: var(--color_nav_menu);
 	box-shadow: 1px 1px 1px #00DDAA, 1px 1px 1px #0055AA inset;
 }
-@media screen and (max-width: 900px) and (min-width: 891px){
+header ul li.button-call{
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	float: right;
+}
+header ul li.button-call a{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+header ul li.button-call a img{
+	width: 20px;
+	padding: 5px;
+	padding-right: 12px;
+}
+
+
+@media screen and (max-width: 1135px){
+	header ul li.menu-button{
+		display: inline-flex !important;
+		float: right;
+	}
+}
+@media screen and (max-width: 1135px) and (min-width: 920px){
 	header ul li.button:nth-child(n+4){
 		width: 100%;
 		position: absolute !important;
@@ -140,12 +167,8 @@ header ul li.menu-button .menu-button-icon div{
     header ul li.active-button:nth-child(n+4)::after{
         background: var(--color_nav_active_dropdown_button_hover);
     }
-	header ul li.menu-button{
-		display: inline-flex !important;
-		float: right
-	}
 }
-@media screen and (max-width: 890px) and (min-width: 579px){
+@media screen and (max-width: 919px) and (min-width: 755px){
 	header ul li.button:nth-child(n+3){
 		width: 100%;
         position: absolute !important;
@@ -170,20 +193,17 @@ header ul li.menu-button .menu-button-icon div{
     header ul li.active-button:nth-child(n+3)::after{
         background: var(--color_nav_active_dropdown_button_hover);
     }
-	header ul li.menu-button{
-		display: inline-flex !important;
-		float: right
-	}
 }
-@media screen and (max-width: 578px){
+@media screen and (max-width: 754px){
 	header ul li.button:nth-child(n+2){
         width: 100%;
         position: absolute !important;
         right: 0px;
-        top: calc(var(--height_header) * var(--local_dropdown_menu_top));
+        top: calc(var(--height_header) * var(--local_dropdown_menu_top) + 1px * var(--local_dropdown_menu_top) - 1px);
         background: var(--color_dropdown_menu);
         padding: 0px;
         z-index: 998;
+        border-bottom: 1px solid var(--color_dropdown_menu_text);
     }
     header ul li.button:nth-child(n+2) a span{
         color: var(--color_dropdown_menu_text);
@@ -200,26 +220,10 @@ header ul li.menu-button .menu-button-icon div{
     header ul li.active-button:nth-child(n+2)::after{
         background: var(--color_nav_active_dropdown_button_hover);
     }
-	header ul li.menu-button{
-		display: inline-flex !important;
-		float: right;
-	}
 }
-
-
-header ul li.button-call{
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	float: right;
-}
-header ul li.button-call a{
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-}
-header ul li.button-call a img{
-	width: 20px;
-	padding: 5px;
-	padding-right: 12px;
+@media screen and (max-width: 475px){
+	header ul li.logo{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
