--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,9 @@ main{
 	z-index: -1;
 }
 
+.subtitle *{
+	transition: font-size 0.2s;
+}
 .subtitle{
 	width: 100%;
 	height: 200px;
@@ -208,4 +211,10 @@ main{
 	.travel-cards{
     	grid-template-columns: repeat(1, var(--travel_card_width));
     }
+}
+
+@media screen and (max-width: 540px){
+	.subtitle h1{
+		font-size: 50px;
+	}
 }
