--- a/css/global.css
+++ b/css/global.css
@@ -62,11 +62,11 @@ img{
 }
 html{
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 body{
     background: var(--color_background);
-    min-height: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -130,4 +130,21 @@ body .pageLoader img{
     body .pageLoader h2{
         display: none;
     }
+}
+
+.quick-chat{
+	position: fixed;
+	right: 20px;
+	bottom: 20px;
+	z-index: 99;
+	min-width: 50px !important;
+	width: 50px;
+	height: 50px;
+	background: #FFFFFF;
+	border-radius: 50%;
+	padding: 10px;
+}
+.quick-chat img{
+	width: 50px;
+	height: 50px;
 }
