--- a/css/main.css
+++ b/css/main.css
@@ -155,8 +155,8 @@ main{
 }
 
 .top-img{
-	width: 100%;
-	height: 100%;
+	height: 100vh;
+	width: 100vw;
 	object-fit: cover;
 	position: fixed;
 	z-index: -1;
