--- a/css/main.css
+++ b/css/main.css
@@ -214,6 +214,12 @@ main{
 
 @media screen and (max-width: 540px){
 	.subtitle h1{
-		font-size: 50px;
+		font-size: 45px;
 	}
+	.subtitle h2#polsko{
+        font-size: 30px !important;
+    }
+    .subtitle h2:last-of-type{
+        font-size: 15px !important;
+    }
 }
