--- a/css/header.css
+++ b/css/header.css
@@ -96,7 +96,6 @@ header ul li.button:hover a > *, header ul li.menu-button:hover a > *{
 header ul li.menu-button{
 	padding: 0px;
 	display: none;
-	position: absolute !important;
 }
 header ul li.menu-button span{
 	padding-right: 10px;
@@ -231,6 +230,6 @@ header ul li.button-call a img{
         padding-right: 10px;
     }
     header ul li.button-call{
-        padding-right: 40px !important;
+        display: none !important;
     }
 }
