--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Bona+Nova:ital,wght@0,400;0,700;1,400&family=Roboto+Slab:wght@400;700&family=Tilt+Prism&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bona+Nova:ital,wght@0,400;0,700;1,400&family=Tilt+Prism&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
 .light-theme{
     --color_background: #FFFFFF;
     --color_background_dark: #050A30;
