--- a/hotels/css/main.css
+++ b/hotels/css/main.css
@@ -5,6 +5,7 @@
 	--colorBorderImage: #000000;
 	--filterInvert: 0;
 	--color_galleryStatus: #000000;
+	--color_bg: #FFFFFF;
 }
 .dark-theme{
 	--color_errorCodeBG: #1F1F1F;
@@ -12,6 +13,7 @@
 	--colorBorderImage: #FFFFFF;
 	--filterInvert: 1;
 	--color_galleryStatus: #FFFFFF;
+	--color_bg: #1F1F1F;
 }
 
 main {
@@ -78,170 +80,185 @@ main .errorCode h4{
     }
 }
 
-main .hotelContent{
-	width: 100%;
+.hotelContent{
+	z-index: 3;
 	flex: 1;
-	display: flex;
-	flex-direction: column;
+	background: var(--color_bg);
 }
 
-main .hotelContent .large-image{
-	display: none;
-}
-
-main .hotelContent .hotelGalleryContainer{
-	width: calc(100% - 40px);
-	justify-content: center;
+.hotelGallery{
+	margin: 30px auto;
 	display: grid;
-	grid-gap: 20px;
-	grid-template-columns: repeat(auto-fit, 300px);
-	margin: 20px;
-}
-
-main .hotelContent .hotelGalleryContainer div.small-image{
-	display: flex;
-	overflow: hidden;
-	border-radius: 10px;
-	box-shadow: 1px 1px 1px var(--color_errorCode), -1px 1px 1px var(--color_errorCode), 1px -1px 1px var(--color_errorCode), -1px -1px 1px var(--color_errorCode);
-}
-
-main .hotelContent .hotelGalleryContainer div.small-image img{
-	height: 200px;
-	width: 100%;
-	object-fit: cover;
-	transition: scale 1s;
-	filter: none !important;
-}
-
-main .hotelContent .hotelGalleryContainer div.small-image img:hover{
-	scale: 1.3;
-	cursor: pointer;
-}
-
-main .hotelContent .hotelGalleryBlurVisible{
-	position: fixed;
-    top: 0px;
-    width: 100vw;
-    height: 100vh;
-    z-index: 9998;
-    backdrop-filter: blur(3px);
-    min-width: 300px;
-}
-
-main .hotelContent .hotelGalleryLarge{
-	position: relative;
-	z-index: 9999;
-
-	margin: 60px;
-	width: calc(100vw - 120px);
-	height: calc(100vh - 120px);
-
-	background: var(--color_errorCodeBG);
-	border: 2px solid var(--colorBorderImage);
-
-    display: grid;
-    grid-template-rows: 1fr 40px;
-    min-width: 300px;
-
-    overflow: hidden;
-}
-main .hotelContent .hotelGallery p{
-	display: none;
-}
-main .hotelContent .hotelGalleryLarge > p{
-	font-size: 15px;
-	text-align: center;
-	font-family: 'Roboto Slap', serif;
-	color: var(--color_galleryStatus);
-	padding: 5px;
-	display: unset !important;
-}
-main .hotelContent .hotelGalleryLarge .hotelGalleryContainer{
-	display: none;
-}
-main .hotelContent .hotelGalleryLarge .large-image{
-	position: relative;
-	display: flex;
-	padding-top: 20px;
-	flex-direction: row;
-	width: 100%;
-	max-height: 100%;
-	min-width: 320px;
-}
-main .hotelContent .hotelGalleryLarge .large-image .viewImage img{
-	display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    max-height: calc(100% - 20px);
-    max-width: calc(100% - 140px);
-    transform: translate(-50%, -50%);
-    filter: none !important;
-}
-main .hotelContent .hotelGalleryLarge .large-image .viewImage p{
-    display: none !important;
-    z-index: 99999;
-    display: block;
-    position: absolute;
-    background: #000000AA;
-    padding: 5px;
-    color: #FFFFFF;
-    top: calc(100% - 25px);
-    left: 50%;
-    height: 20px;
-    max-width: calc(100% - 140px);
-    transform: translate(-50%, -50%);
-    filter: none !important;
-}
-
-main .hotelContent .hotelGallery .large-image .galleryButton{
-	display: none;
-}
-
-main .hotelContent .hotelGalleryLarge .large-image .galleryButton{
-	height: -webkit-fill-available;
-	position: relative;
-	display: grid !important;
+	justify-content: center;
+	max-width: 800px;
+	grid-template-columns: repeat(auto-fill, 220px);
+	grid-gap: 20px 20px;
 	place-items: center;
 }
 
-main .hotelContent .hotelGalleryLarge .large-image .galleryButton:first-child{
-	position: absolute;
-	left: 0px;
-}
-main .hotelContent .hotelGalleryLarge .large-image .galleryButton:last-child{
-	position: absolute;
-	right: 0px;
-}
-
-main .hotelContent .hotelGalleryLarge .large-image .galleryButton img{
-	padding: 10px;
-	width: 50px;
-	height: 50px;
-	filter: invert(var(--filterInvert));
-}
-
-main .hotelContent .hotelGalleryLarge .large-image .galleryButton img:hover{
+.small-image{
+	display: block;
+	justify-content: center;
 	cursor: pointer;
 }
 
+.small-image img{
+	box-shadow: 1px 1px 1px #444;
+}
+
+.hotelGalleryViewBlur.visible{
+	display: unset !important;
+}
+.hotelGalleryViewBlur{
+    top: 0px;
+    left: 0px;
+
+    width: 100%;
+    height: 100%;
+
+    z-index: 999;
+
+    overflow: hidden;
+    position: fixed;
+
+    display: none;
+
+    background: #0b0b0b;
+    opacity: .8;
+}
+
+.hotelGalleryView.visible{
+	display: grid !important;
+	grid-template-columns: 90px 1fr 90px;
+	place-items: center;
+}
+.hotelGalleryView{
+	z-index: 9999;
+
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+
+	display: none;
+	position: fixed;
+
+	cursor: zoom-out;
+}
+
+.hotelGalleryView-img{
+	position: relative;
+	display: block;
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    line-height: 0;
+    box-sizing: border-box;
+    margin: 0 auto;
+    cursor: default;
+}
+
+.hotelGalleryView-img > img{
+	display: block;
+	width: auto;
+	max-width: calc(100vw - 180px);
+	max-height: 100vh;
+	height: auto;
+	line-height: 0;
+	box-sizing: border-box;
+	margin: 0 auto;
+	cursor: default;
+	padding: 40px 0px;
+}
+
+.hotelGalleryView-description{
+	height: 20px;
+	margin-top: -36px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    cursor: auto;
+}
+
+.hotelGalleryView-description > p{
+	font-family: 'Roboto Slab', serif;
+}
+
+.hotelGalleryView-description-text{
+	position: absolute;
+    top: 0;
+    left: 0;
+    color: #ccc;
+    font-size: 12px;
+    line-height: 18px;
+}
+
+.hotelGalleryView-description-img-count{
+	position: absolute;
+    top: 0;
+    right: 0;
+    color: #ccc;
+    font-size: 12px;
+    line-height: 18px;
+}
+
+.hotelGalleryView > img{
+	display: block;
+	width: 90px;
+	height: 90px;
+	cursor: pointer;
+	filter: invert(1);
+}
+.hotelGalleryView > img:hover{
+	filter: invert(0.8);
+}
+
+.small-image img{
+	width: 200px;
+}
+
 @media screen and (max-width: 600px){
-	main .hotelContent .hotelGalleryLarge{
-        margin-left: 10px;
-        margin-right: 10px;
-        width: calc(100vw - 20px);
+	.hotelGalleryView > img{
+    	width: 50px;
+    	height: 50px;
     }
 }
-@media screen and (max-width: 420px){
-	main .hotelContent .hotelGalleryLarge .large-image{
-        flex-direction: column;
-    }
-    main .hotelContent .hotelGalleryLarge .large-image .galleryButton{
-        height: fit-content;
-        width: -webkit-fill-available;
-    }
-    main .hotelContent .hotelGalleryLarge .large-image .galleryButton:last-of-type{
-        bottom: 0px;
-        top: unset;
-    }
+
+.hotelContentSelector{
+	width: 100%;
+	margin-top: 0px;
+	justify-content: center;
+	list-style-type: none;
+	display: flex;
+	flex-direction: row;
+	border-bottom: 1px solid #000000;
+}
+.hotelContentSelector li{
+	overflow: hidden;
+	display: block;
+	color: #FFFFFF;
+	padding: 10px;
+	margin: 5px;
+	border-top: 1px solid #000000;
+	border-left: 1px solid #000000;
+	border-right: 1px solid #000000;
+	border-bottom: 1px solid #00AA00;
+	background: #00AA00;
+	cursor: pointer;
+	border-radius: 10px 10px 0px 0px;
+	margin-bottom: -1px;
+}
+.hotelContentSelector li.active{
+	background: #FFFFFF;
+	border-bottom: 1px solid #FFFFFF;
+	color: #000000;
+}
+
+.hotelData.invisible{
+	display: none !important;
+}
+
+.hotelGallery.invisible{
+	display: none !important;
 }
