--- a/css/global.css
+++ b/css/global.css
@@ -33,7 +33,7 @@
 	--color_dropdown_menu_text: #212D59;
 	--color_nav_active_dropdown_button_hover: #00FF00;
     --color_nav_dropdown_button_hover: #212D59;
-    --color_travel_card: #FFBE00;
+    --color_travel_card: #d18801;
     --color_travel_card_inverse: #000C66;
     --color_travel_card_shadow: #000000;
     --color_travel_card_border: #0000FF;
