--- a/hotels/css/main.css
+++ b/hotels/css/main.css
@@ -22,7 +22,7 @@
 
 .hotelContent{
 	display: flex;
-	flex-direction: row;
+	max-width: 100vw;
 	z-index: 3;
 	flex: 1;
 }
@@ -166,7 +166,6 @@
 }
 .hotelContentFragment{
 	width: 100%;
-	flex: 1;
 	background: var(--color_fragment_bg);
 }
 .hotelContentSelector{
@@ -213,12 +212,27 @@
 						 ". a spacer e ."
 						 ". a spacer c ."
                          ". d d c ."
-                         ". d d . ."
+                         ". d d rezv ."
+                         ". f f f ."
                          ". . . . .";
-	grid-template-columns: 1fr max-content max-content max-content 1fr;
-	grid-template-rows: auto 100px 90px auto auto 1fr;
+	grid-template-columns: auto min-content min-content min-content auto;
+	grid-template-rows: auto 100px 90px auto auto auto 1fr;
 }
 .hotelData-about-div{
+	width: calc(100% - 40px) !important;
+	height: min-content;
+	display: grid;
+}
+.hotelData-rezv-div{
+	width: calc(100% - 20px) !important;
+	padding: 0px !important;
+}
+#hotel-description, #hotel-description span{
+	font-family: 'Roboto Slab', serif;
+	color: var(--color_cards_text);
+	text-shadow: 1px 1px 1px #000000;
+}
+.hotelData-book-div{
 	width: calc(100% - 40px) !important;
 	height: min-content;
 }
@@ -246,6 +260,7 @@
 .hotelData-rating-div{
 	width: 200px;
 	padding: 0px;
+	background: none;
 }
 .hotelData-price-div{
 	width: 200px;
@@ -304,6 +319,7 @@
 	display: flex;
 	flex-direction: column;
 	padding: 10px;
+	background-color: var(--color_cards_bg);
 }
 .hotelData-rating-users * {
 	font-family: 'Roboto Slab', serif;
@@ -317,4 +333,50 @@
 }
 .hotelData-rating-users p span{
 	margin-left: auto;
+}
+#hotel-book-it{
+	background: rgb(30, 138, 30);
+	color: var(--color_cards_text);
+	text-shadow: 1px 1px 1px black;
+	padding: 10px;
+	user-select: none;
+	text-align: center;
+	font-size: 20px;	
+}
+#hotel-book-it:hover{
+	filter:blur(0.5px);
+	opacity: 0.9;
+	cursor: pointer;
+}
+.bookError{
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	position: fixed;
+	background: #22222288;
+	z-index: 9999999;
+	justify-content: center;
+	align-items: center;
+}
+.bookError > div{
+	position: relative;
+    width: 300px;
+    height: 200px;
+
+    background: var(--color_background_dark);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border: 2px solid var(--color_loader);
+}
+.bookError > div > h1{
+	text-align: center;
+	font-family: 'Roboto Slab', serif;
+	padding: 10px;
+	font-size: 25px;
+}
+* {
+	user-select: none;
 }
